Reviews part II

--- a/1-introducao/capitulo_intro.tex
+++ b/1-introducao/capitulo_intro.tex
@@ -24,7 +24,7 @@ e proteção de um banco de dados por um longo período; e também atuam no proc
 a escolha do SGBD no processo de desenvolvimento de um ambiente de análise para organizações com grande quantidade de dados e que utilizam ferramentas OLAP 
 como auxílio na tomada de decisões é importante. 
 
-Duas classes de SGBD podem ser utilizadas para realizar o gerenciamento de um DW: SGBD relacionais tradicionais orientados à linha (tupla) e uma nova abordagem de SGBD que são orientados à coluna, que fornecem um melhor desempenho à recuperação de dados \cite{good2017column}. 
+Duas classes de SGBD podem ser utilizadas para realizar o gerenciamento de um DW: SGBD relacionais tradicionais orientados à linha (tupla) e uma nova abordagem de SGBD orientados à coluna, que fornecem um melhor desempenho à recuperação de dados \cite{good2017column}. 
 Dada a importância na escolha do SGBD e as diferentes soluções apresentadas por cada um, torna-se útil o uso de um 
 \textit{benchmark}\footnote{Ferramentas utilizadas para medir e validar o desempenho de alguma tecnologia sob condições de avaliação \cite{bouckaert2010benchmarking}} 
 para a realização de uma análise entre os SGBD. Existe uma organização sem fins lucrativos fundada com o objetivo de definir padrões para avaliar o 
