--- a/3-FUNDAMENTOS/capitulo_fundamentos.tex
+++ b/3-FUNDAMENTOS/capitulo_fundamentos.tex
@@ -484,7 +484,7 @@ Em suma, ao implementar um banco colunar tanto a aplicação deve ser capaz de e
 dos principais diferenciais de modelos colunares não será explorado e poderá não haver impacto no desempenho quando trabalhado com uma 
 grande massa de dados, como é a realidade de empresas.
 
-Exemplos de SGBD colunares são o MonetDB \cite{monetdb2017c}, C-Store \cite{cstore2018nosql}, Vertica \cite{vertica2017c}, e o LucidDB \cite{lucid2018column}.
+Exemplos de SGBD colunares são o MonetDB \cite{monetdb2017c}, C-Store \cite{cstore2018nosql}, Vertica \cite{vertica2017c} e o LucidDB \cite{lucid2018column}.
 \section{Considerações Finais}
 
 % data warehouses e olap -> modelo denormalizado -> sgbdr x sgbdc
