--- a/5-TPCH/capitulo_tpch.tex
+++ b/5-TPCH/capitulo_tpch.tex
@@ -137,8 +137,9 @@ Os tipos de dados atribuídos aos atributos de uma entidade podem ser do tipo id
 
 \section{Ambiente Denormalizado}
 
-As modificações no modelo do ambiente \textit{snowflake} se fundamentaram na criação de um modelo parecido com o apresentado pela modelagem \textit{star}, com uma Tabela Fato central descrita por Tabelas Dimensão. Vale frisar que as modelagens denormalizadas em empresas variam entre um modelo \textit{star} e um modelo que pode utilizar apenas uma tabela contendo todos os atributos da empresa, conforme decisão de projeto.
-Também procurou-se eliminar quaisquer tabelas cujos atributos sejam frequentemente utilizados em operações de junção, alguns característicos de um modelo com Tabelas Subdimensão, e que possam ser incluídos nas tabelas que possuam relacionamento com eles. O esquema final do modelo \textit{star} é mostrado na Figura \ref{fig:star}.
+As modificações no modelo do ambiente \textit{snowflake} se fundamentaram na criação de um modelo parecido com o apresentado pela modelagem \textit{star}, com uma Tabela Fato central descrita por Tabelas Dimensão. Procurou-se eliminar quaisquer tabelas cujos atributos sejam frequentemente utilizados em operações de junção, alguns característicos de um modelo com Tabelas Subdimensão, e que possam ser incluídos nas tabelas que possuam relacionamento com eles.
+
+Vale frisar que as modelagens denormalizadas em empresas variam entre um modelo \textit{star} e um modelo que pode utilizar apenas uma tabela contendo todos os atributos da empresa, conforme decisão de projeto e aplicação. Ainda, a denormalização sob um cenário organizacional tem foco na estrutura em que os dados serão consultados e nas próprias consultas, visando redução da complexidade baseado em seu universo de aplicação, ou seja, a estrutura é construída pensando na otimização. No caso do TPC-H, a modelagem e as consultas originais foram pensadas no cenário normalizado e portanto, mesmo que reescritas, podem não representar um cenário denormalizado ideal.
 
 \begin{figure*}[h]
 	\centering
@@ -147,7 +148,7 @@ Também procurou-se eliminar quaisquer tabelas cujos atributos sejam frequenteme
 	\label{fig:star}
 \end{figure*}
  
-A primeira modificação no modelo \textit{snowflake} foi a remoção das entidades Dimensão \textit{nation} e \textit{region}. Essas entidades são Tabelas Subdimensão das entidades \textit{customer} e \textit{supplier}, sendo frequentemente requeridas quando há a necessidade de consultar a nação e/ou a região de um cliente e/ou de um fornecedor, assim optou-se por incluir os atributos \texttt{n\_name, n\_comment, r\_name} e \texttt{r\_comment} nas entidades \textit{supplier} e \textit{customer}. 
+O esquema final do modelo \textit{star} é mostrado na Figura \ref{fig:star}. A primeira modificação no modelo \textit{snowflake} foi a remoção das entidades Dimensão \textit{nation} e \textit{region}. Essas entidades são Tabelas Subdimensão das entidades \textit{customer} e \textit{supplier}, sendo frequentemente requeridas quando há a necessidade de consultar a nação e/ou a região de um cliente e/ou de um fornecedor, assim optou-se por incluir os atributos \texttt{n\_name, n\_comment, r\_name} e \texttt{r\_comment} nas entidades \textit{supplier} e \textit{customer}. 
 
 Com a intenção de criar uma única Tabela Fato no esquema denormalizado, observou-se (i) a possibilidade de unir as entidades \textit{lineitem} e \textit{orders} em uma única entidade nomeada como \textit{item}, visto que as duas possuem um relacionamento. Isto também eliminaria algumas junções realizadas entre as duas entidades nas consultas listadas no Apêndice \ref{queries_1}. A PK \texttt{c\_custkey} de \textit{customer} que antes estava em \textit{orders} como FK é transferida agora para \textit{item}. Também nota-se que (ii) as entidades \textit{part} e \textit{supplier} têm suas PKs como FKs na entidade antes denominada \textit{lineitem}, provenientes da entidade intermediária \textit{partsupp}. Optou-se assim por incluir os atributos de \textit{partsupp} na nova entidade \textit{item}, excluindo a primeira do esquema e mantendo o relacionamento de \textit{supplier} e \textit{part} diretamente com \textit{item}, através das chaves \texttt{p\_partkey} e \texttt{s\_suppkey}.
 
