--- a/7-Conclusao/capitulo_conclusao.tex
+++ b/7-Conclusao/capitulo_conclusao.tex
@@ -25,11 +25,9 @@ Um fator que trouxe resultados melhores no MonetDB, além dos já citados de ban
 
 Retomando a discussão entre OLAP e OLTP, armazenar os dados de um ambiente transacional em memória pode trazer problemas, tornando mais interessante de fato para um ambiente transacional que seus dados sejam armazenados em um dispositivo não-volátil. Um ambiente altamente normalizado perde por não escalar horizontalmente de forma tão simples, o que já acarreta demora na recuperação do servidor em caso de queda, portanto não é interessante que ocorra perda de dados em memória. Em um ambiente analítico, a inserção de dados já é mais rápida considerando o uso do MonetDB e ele pode ser escalável horizontalmente, fazendo com que uma queda e perda de dados em memória não seja tão crítica.
 
-Para ambientes transacionais cuja modelagem ainda segue os padrões de normalização o uso de um SGBD como o PostgreSQL continua sendo vantajoso, pois além dos resultados obtidos deve se considerar que um SGBDR preza pela consistência nos dados, e para um sistema transacional que envolva transações bancárias, por exemplo, a consistência é fundamental. Em ambiente analítico é confirmado que um banco colunar traz melhor desempenho para a recuperação de informações e o MonetDB ainda possui a vantagem de utilizar dados em memória. Para que se faça um bom uso da \textit{cache} nesse SGBD é possível aproveitar justamente o fator de consultas analíticas, embora não idênticas, serem similares por simular cenários com agrupamentos e atributos Fato, para realizar um \textit{warm-up} de dados para que estes já estejam em \textit{cache}.
+Para ambientes transacionais cuja modelagem ainda segue os padrões de normalização o uso de um SGBD como o PostgreSQL continua sendo vantajoso, pois além dos resultados obtidos deve se considerar que um SGBDR preza pela consistência nos dados, e para um sistema transacional que envolva transações bancárias, por exemplo, a consistência é fundamental. Em ambiente analítico é confirmado que um banco colunar traz melhor desempenho para a recuperação de informações, junto de uma modelagem denormalizada de dados, e o MonetDB ainda possui a vantagem de utilizar dados em memória. Para que se faça um bom uso da \textit{cache} nesse SGBD é possível aproveitar justamente o fator de consultas analíticas, embora não idênticas, serem similares por simular cenários com agrupamentos e atributos Fato, para realizar um \textit{warm-up} de dados para que estes já estejam em \textit{cache}.
 
-De maneira geral, a pesquisa corroborou a teoria de que SGBDR atuam melhor sob operações transacionais, e que mesmo em ambiente analítico a modelagem mais normalizada é ideal para esta classe de SGBD. Por não precisarem do mesmo desempenho para recuperação de informações como consultas analíticas, eles podem se ater a consistência de dados e a uma modelagem normalizada, optando por deixar de lado o particionamento horizontal dos dados, mesmo que isso degrade a disponibilidade destes ao ocorrer uma queda de servidor.
-
-Para ambientes analíticos, reforça-se que um SGBDC é uma ótima escolha na recuperação de dados. Todos seus atributos estarão armazenados juntos, as chances de conseguir uma alta compressão são maiores e a reconstrução de tuplas, dependendo de qual for sua implementação, é feita de forma mais inteligente que em SGBDR. Por serem uma classe de SGBD NoSQL, garantem alta disponibilidade e são capazes de realizar particionamento horizontal, por isso o desempenho é melhor em modelagens denormalizadas, aumentando a eficiência na recuperação de dados em um DW. Porém, deve atentar-se ao fato de que o tamanho da base de dados pode influenciar no desempenho final, visto que os resultados entre as modelagens no MonetDB não foram tão discrepantes entre si pois a diferença do tempo total das consultas foi pequena.
+De maneira geral, a pesquisa corroborou a teoria de que SGBDR atuam melhor sob operações transacionais. Por não precisarem do mesmo desempenho para recuperação de informações como consultas analíticas, eles podem se ater a consistência de dados e a uma modelagem normalizada, optando por deixar de lado o particionamento horizontal dos dados, mesmo que isso degrade a disponibilidade destes ao ocorrer uma queda de servidor. Em detrimento a isso, para ambientes analíticos, reforça-se que um SGBDC sob modelagem denormalizada é uma boa escolha na recuperação de dados. Todos seus atributos estarão armazenados juntos, as chances de conseguir uma alta compressão são maiores e a reconstrução de tuplas, dependendo de qual for sua implementação, é feita de forma mais inteligente que em SGBDR. Porém, deve atentar-se ao fato de que o tamanho da base de dados pode influenciar no desempenho final, visto que os resultados entre as modelagens no MonetDB não foram tão discrepantes entre si pois a diferença do tempo total das consultas foi pequena.
 
 % \section{Trabalhos Futuros}
 
@@ -38,7 +36,7 @@ Como continuidade para a pesquisa sugere-se:
 \begin{itemize}
     \item Realizar um estudo mais aprofundado sobre escalabilidade horizontal em bancos NoSQL, e se possível aplicar o \textit{benchmark} considerando um cenário utilizando um único servidor para processamento de consultas e outro com vários servidores, a fim de simular problemas que teoricamente são solucionados pelo particionamento horizontal, como queda, ou falha, e distribuição de dados.
 
-    \item Utilizar bases de dados maiores, a partir de 100GB, para que se possa também comparar os resultados com os contidos na página oficial do TPC-H.
+    \item Utilizar bases de dados maiores, a partir de 100GB, para que se possa comparar os resultados com os contidos na página oficial do TPC-H e avaliar o comportamento dos valores de desempenho das modelagens, se tais valores podem se equiparar a partir de um certo tamanho de base de dados.
 
     \item Denormalizar o modelo \textit{star} em um nível maior, considerando utilizar somente uma tabela fato, visto que muitas empresas utilizam esse modelo.
 
