--- a/ModeloTCC.tex
+++ b/ModeloTCC.tex
@@ -139,8 +139,8 @@
 
 % Páginas iniciais
 \include{iniciais/capa}
-\include{iniciais/rosto}
-\include{iniciais/aprova}
+\include{iniciais/rosto2}
+% \include{iniciais/aprova}
 
 \oneandhalfspacing
 
