--- a/Referencias.bib
+++ b/Referencias.bib
@@ -476,7 +476,14 @@ month={Oct},}
   publisher={ACM}
 }
 
-@mastersthesis{soares2012avaliaccao,
+@misc{jdbc2018cache, 
+  title = {Statement and Result Set Caching},
+  year = 2018,
+  url = {https://docs.oracle.com/cd/B28359\_01/java.111/b31224/stmtcach.htm},
+  note = {Acessado em: 12 de julho de 2018}
+}
+
+@phdthesis{soares2012avaliaccao,
   title={Uma Avaliação Experimental de Desempenho entre Sistemas Gerenciadores de Bancos de Dados Colunares e Relacionais},
   author={Soares, Bruno Eduardo},
   school = {Universidade Estadual do Oeste do Paraná},
