--- a/iniciais/resumo.tex
+++ b/iniciais/resumo.tex
@@ -9,7 +9,7 @@
 
 \noindent
 
-\textit{Data Warehouses} se consolidaram nas organizações como tecnologia de apoio à tomada de decisão utilizando aplicações OLAP sobre os dados armazenados. Conforme o volume destes dados aumenta, tornam-se necessárias abordagens mais eficientes para seu processamento. Sistemas Gerenciadores de Bancos de Dados, os SGBD, relacionais são muito utilizados para este propósito, porém novas abordagens têm ganhado destaque, em especial a classe colunar de banco de dados, cada qual com suas vantagens conforme a modelagem do \textit{Data Warehouse}. Modelagens mais normalizadas são tradicionais entre os relacionais, enquanto que modelagens denormalizadas trazem desempenho superior em SGBD colunares. Um estudo comparativo entre os SGBD PostgreSQL e MonetDB utilizando o \textit{benchmark} TPC-H é aqui apresentado, investigando qual é o mais indicado para gerenciar um \textit{Data Warehouse} na recuperação de informações sob as modelagens \textit{snowflake} e \textit{star}. Este estudo foi feito considerando bases de dados de três tamanhos diferentes, 1GB, 10GB e 30GB a fim de simular desde uma quantia menor de registros até um volume maior. Os resultados experimentais confirmam que, tomando apenas o SGBD, o PostgreSQL apresenta desempenho melhor sob ambientes normalizados, enquanto que o MonetDB se destaca nos denormalizados. Como um todo, o MonetDB se destacou tanto para o modelo normalizado quanto para o denormalizado em relação ao PostgreSQL, com ganhos superiores a 100\% no ambiente \textit{snowflake} e 600\% no \textit{star} considerando dados em \textit{hot run}, e 80\% e 200\% em \textit{cold run}.
+\textit{Data Warehouses} se consolidaram nas organizações como tecnologia de apoio à tomada de decisão utilizando aplicações OLAP sobre os dados armazenados. Conforme o volume destes dados aumenta, tornam-se necessárias abordagens mais eficientes para seu processamento. Sistemas Gerenciadores de Bancos de Dados, os SGBD, relacionais são muito utilizados para este propósito, porém novas abordagens têm ganhado destaque, em especial a classe colunar de banco de dados, cada qual com suas vantagens conforme a modelagem do \textit{Data Warehouse}. Modelagens mais normalizadas são tradicionais entre os relacionais, enquanto que modelagens denormalizadas trazem desempenho superior em SGBD colunares. Um estudo comparativo entre os SGBD PostgreSQL e MonetDB utilizando o \textit{benchmark} TPC-H é aqui apresentado, investigando qual é o mais indicado para gerenciar um \textit{Data Warehouse} na recuperação de informações sob as modelagens \textit{snowflake} e \textit{star}. Este estudo foi feito considerando bases de dados de três tamanhos diferentes, 1GB, 10GB e 30GB a fim de simular desde uma quantia menor de registros até um volume maior. Os resultados experimentais confirmam que, tomando apenas o SGBD, o PostgreSQL apresenta desempenho melhor sob ambientes normalizados, enquanto que o MonetDB se destaca nos denormalizados. Como um todo, o MonetDB se destacou tanto para o modelo normalizado quanto para o denormalizado em relação ao PostgreSQL, com ganhos superiores a 100\% no ambiente \textit{snowflake} e 600\% no \textit{star} considerando dados em \textit{hot run} (dados em memória), e 80\% e 200\% em \textit{cold run} (sem dados em memória).
 
 
 \vspace{1cm}
