--- a/Referencias.bib
+++ b/Referencias.bib
@@ -483,7 +483,7 @@ month={Oct},}
   note = {Acessado em: 12 de julho de 2018}
 }
 
-@phdthesis{soares2012avaliaccao,
+@phdsthesis{soares2012avaliaccao,
   title={Uma Avaliação Experimental de Desempenho entre Sistemas Gerenciadores de Bancos de Dados Colunares e Relacionais},
   author={Soares, Bruno Eduardo},
   school = {Universidade Estadual do Oeste do Paraná},
