--- a/iniciais/resumo.tex
+++ b/iniciais/resumo.tex
@@ -14,6 +14,6 @@
 
 \vspace{1cm}
 \noindent
-\textbf{Palavras-chave: OLAP, TPC-H, SGBD, NoSQL, MonetDB, PostgreSQL, Data Warehouse, Benchmark}
+\textbf{Palavras-chave: OLAP, TPC-H, SGBD, Relacional, Colunar, MonetDB, PostgreSQL, Data Warehouse, Benchmark}
 
 
